--- a/layout/links.html
+++ b/layout/links.html
@@ -26,7 +26,7 @@
 <div class="mdui-card article">
     <div class="mdui-card-content">
         {{html}}
-        <div id="md-body" class="md-body">{{content|markdown_math}}</div>
+        <div id="md-body" class="md-body">{{md(content)}}</div>
     </div>
 </div>
 {%endif%}
