--- a/layout/footer.html
+++ b/layout/footer.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="mdui-col mdui-text-center mdui-typo">
                         <div>Powered by <a href="https://github.com/zcmimi/py-blog">py-blog</a></div>
-                        <div>Theme material</div>
+                        <div>Theme <a href="https://github.com/zcmimi/py-blog-theme-material">material</a></div>
                     </div>
                 </div>
             </div>
