--- a/layout/drawer.html
+++ b/layout/drawer.html
@@ -1,10 +1,6 @@
-<div class="mdui-drawer mdui-drawer-close mdui-drawer-full-height" id="drawer">
+<div class="mdui-drawer mdui-drawer-close" id="drawer">
     <ul class="mdui-list">
-        <li class="mdui-list-item">
-            <i class="mdui-list-item-icon mdui-icon material-icons mdui-text mdui-text-color-black">home</i>
-            <a href="{{config.site_rt}}/" class="mdui-list-item-content">{{config.site_name}}</a>
-        </li>
-        <li><center><img src="{{t_config.avatar}}" width="95%" height="95%" alt='avatar'></img></center></li>
+        <li><center><img src="{{t_config.avatar}}" alt='avatar' class="mdui-img-fluid mdui-img-rounded"></img></center></li>
         {%for i in t_config.drawer-%}
             <li class='mdui-subheader'>{{i}}</li>
             {%for j in t_config.drawer[i]-%}
