--- a/source/assets/markdown.css
+++ b/source/assets/markdown.css
@@ -1,10 +1,9 @@
 .md-body {
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    line-height: 1.5;
-    color: #24292e;
-    font-size: 17px;
-    line-height: 1.5;
+    color: #000000de;
+    line-height: 1.6;
+    font-size: 18px;
     word-wrap: break-word;
 }
 .md-body details{
@@ -56,11 +55,6 @@
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-}
-
-.md-body a {
-    color: #009dff;
-    text-decoration: none;
 }
 
 .md-body strong {
@@ -286,7 +280,7 @@
 .md-body h1,
 .md-body h2 {
     padding-bottom: .3em;
-    border-bottom: 1px solid #eaecef;
+    border-bottom: 1px solid #80808028;
 }
 
 .md-body h2 {
@@ -368,15 +362,6 @@
     border: 1px solid #dfe2e5;
 }
 
-.md-body table tr {
-    background-color: #fff;
-    border-top: 1px solid #c6cbd1;
-}
-
-.md-body table tr:nth-child(2n) {
-    background-color: #f6f8fa;
-}
-
 .md-body img {
     max-width: 100%;
     box-sizing: initial;
@@ -409,10 +394,7 @@
 }
 
 .md-body pre,
-.md-body code {
-    font-size: 16px;
-    font-family: Monaco, Ubuntu mono, Hack, Consolas;
-}
+.md-body code {font-size: 16px;}
 
 details {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
