--- a/layout/tags_index.html
+++ b/layout/tags_index.html
@@ -2,7 +2,7 @@
 {%block content_head%}
 <div class="mdui-typo">
     <h1>
-        <small><a href="{{config.site_rt}}tags/"><i class="mdui-icon material-icons">arrow_back</i></a></small>
+        <small><a href="{{config.site.rt}}tags/"><i class="mdui-icon material-icons">arrow_back</i></a></small>
         {{tag}}
         <small>共{{total}}篇文章</small>
     </h1>
