--- a/source/assets/theme/night.css
+++ b/source/assets/theme/night.css
@@ -1,4 +1,5 @@
 .text{color: #fff;}
+.mdui-appbar{background-color: #212121 !important;}
 .md-body blockquote{color: #bbb;}
 a{color:#51b9ff;}
 code{color:#708fff;}
