--- a/layout/appbar.html
+++ b/layout/appbar.html
@@ -1,13 +1,13 @@
 <div class="mdui-appbar mdui-appbar-fixed mdui-appbar-scroll-hide">
-    <div class="mdui-toolbar mdui-color-theme">
+    <div class="mdui-toolbar">
         <button class="mdui-btn mdui-btn-icon" mdui-drawer="{target:'#drawer'}" mdui-tooltip="{content: '菜单'}">
             <i class="mdui-icon material-icons">menu</i>
         </button>
-        <a href="{{config.site_rt}}" class="mdui-typo-title">{{config.site_name}}</a>
+        <a href="{{config.site.rt}}" class="mdui-typo-title">{{config.site.name}}</a>
         <div class="mdui-toolbar-spacer"></div>
         <div class="mdui-row mdui-hidden-sm-down">
             {%for i in t_config.appbar.pages-%}
-            <a href="{{t_config.appbar.pages[i]}}" target="_blank" class="mdui-col text">{{i}}</a>
+            <a href="{{t_config.appbar.pages[i]}}" target="_blank" rel="noopener" class="mdui-col text">{{i}}</a>
             {%-endfor%}
         </div>
         <button class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '切换主题'}" mdui-menu="{target: '#theme_menu',align: 'right',covered: false}">
@@ -19,7 +19,7 @@
             <li class="mdui-menu-item" mdui-tooltip="{content: '满足你的少女心吧'}"><a onclick="theme('pink')">粉红</a></li>
             <li class="mdui-menu-item" mdui-tooltip="{content: '没什么,就是淡蓝色'}"><a onclick="theme('blue')">粉蓝</a></li>
         </ul>
-        <button onclick="search_dialog.open();document.getElementById('search_input').focus();" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '搜索'}">
+        <button mdui-dialog="{target:'#search_dialog'}" onclick="document.getElementById('search_input').focus();" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '搜索'}">
             <i class="mdui-icon material-icons">search</i>
         </button>
         <button id='toc_button' class="mdui-btn mdui-btn-icon" mdui-drawer="{target:'#toc_drawer'}" mdui-tooltip="{content: '目录'}" hidden>
