--- a/layout/links.html
+++ b/layout/links.html
@@ -9,7 +9,7 @@
                 <a href="{{j.url}}" target="_blank">
                     <div class="mdui-card" style="background-color: {{j['bg-color']}};backdrop-filter:blur(5px);">
                         <div class="mdui-card-media">
-                            <img class="link-img" data-src="{{j.avatar}}" src='{{assets_rt}}/icon/loading.svg' alt="{{j.name}}">
+                            <img class="link-img" data-src="{{j.avatar}}" src='{{assets_rt}}icon/loading.svg' alt="{{j.name}}">
                         </div>
                         <div class="mdui-card-primary">
                             <div class="mdui-card-primary-title mdui-text-truncate mdui-text-color-black" mdui-tooltip="{'content': '{{j.name}}' }">{{j.name}}</div>
